--- a/style/player.css
+++ b/style/player.css
@@ -1,3 +1,32 @@
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(112, 110, 110);
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: rgb(44, 43, 43);
+    border-radius: 50px;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #111111;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -16,11 +45,15 @@
     clear: both;
 }
 
+.playlist {
+    display: none;
+}
+
 
 /* player video */
 
 .player-video {
-    position: relative;
+    position: absolute;
     float: float;
     width: 640px;
     height: 360px;
@@ -40,7 +73,7 @@
 }
 
 .player-video .video-controls {
-    position: absolute;
+    position: relative;
     background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 10%;
